# optscale

./: build.sh  logsdetestes.txt
.github/workflows/: test_rest-api.yaml
auth/: pyproject.toml
bi_exporter/: pyproject.toml
bumischeduler/: pyproject.toml
bumiworker/: pyproject.toml
bumiworker/bumiworker/: main.py  tasks.py
clickhouse/: aws_bucket_intelligent_tiering_info.sql
diproxy/: pyproject.toml
diworker/: pyproject.toml
diworker/diworker/: main.py
docker_images/etcd/: Dockerfile
docker_images/resource_discovery/: worker.py
gemini/gemini_scheduler/: pyproject.toml
gemini/gemini_worker/: Dockerfile  pyproject.toml
herald/: pyproject.toml
insider/insider_api/: pyproject.toml
insider/insider_scheduler/: pyproject.toml
insider/insider_worker/: pyproject.toml
jira_bus/: pyproject.toml
jira_ui/ui/: package-lock.json  package.json
katara/katara_service/: pyproject.toml
katara/katara_worker/: pyproject.toml
keeper/: pyproject.toml
metroculus/metroculus_api/: pyproject.toml
metroculus/metroculus_scheduler/: pyproject.toml
metroculus/metroculus_worker/: pyproject.toml
ngui/: codegen.ts  package.json  pnpm-lock.yaml
ngui/server/: package.json  server.ts
ngui/ui/: .env.sample  package-lock.json  package.json  vite.config.mts
optscale-deploy/: configure-optscale.sh  deploy_optscale_eks.sh  runkube.py  templates.yaml  tmp  values-eks.yaml  values-teste.yaml
optscale-deploy/backup_module/: secrets.yaml
optscale-deploy/optscale/: values-eks.yaml  values.yaml
optscale-deploy/overlay/: user_template.yml
optscale-deploy/ssl-key/: cert.pem  key.pem
optscale-deploy/tmp/: base_overlay
optscale-deploy/tmp_tls/: optscale.crt  optscale.key
optscale_client/aconfig_cl/: setup.py
optscale_client/config_client/: client.py
optscale_client/rest_api_client/: client_v2.py
rest_api/: live_demo.tar.xz  pyproject.toml
rest_api/rest_api_server/: constants.py  exceptions.py  server.py  utils.py
rest_api/rest_api_server/alembic/versions/: 5a121c63e3f2_initial.py  add_log_group_to_discovery_info.py  ae56a2422e31_lb_discovery_type.py
rest_api/rest_api_server/controllers/: available_filters.py  base.py  cloud_account.py  expense.py  policy_gen.py  report_import.py  ri_breakdown.py
rest_api/rest_api_server/handlers/v2/: __init__.py
rest_api/rest_api_server/tests/unittests/: test_api_base.py  test_cloud_accounts.py  test_discovery_infos_api.py  test_expenses_api.py  test_schedule_imports.py
risp/risp_scheduler/: pyproject.toml
risp/risp_worker/: pyproject.toml
slacker/: pyproject.toml
tools/cloud_adapter/: model.py  setup.py
(+380 files in other folders)
